--- a/Web/Bookworm.Web/Views/Book/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Edit.cshtml
@@ -1,89 +1,121 @@
 ﻿@model EditBookFormModel
 
 @{
-    ViewData["Title"] = "Edit Book";
+    this.ViewData["Title"] = "Edit Book";
+    this.ViewData["Icon-Class"] = "fa-book";
 }
 
-<h2 class="text-center">@ViewData["Title"]</h2>
+<partial name="PartialViews/_TitleCardPartial" />
 
-<form id="editBookForm" method="post" class="col-lg-8 offset-lg-2" enctype="multipart/form-data">
-    <input type="hidden" asp-for="Id" value="@Model.Id">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Title"><strong>Title</strong></label>
-        <input asp-for="Title" value="@Model.Title" type="text" class="form-control">
-        <span asp-validation-for="Title" class="small text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="LanguageId"><strong>Select Language</strong></label>
-        <select asp-for="LanguageId" size="5" aria-label="size 5 select example" class="form-select form-control">
-            @foreach (var language in Model.Languages)
-            {
-                <option value=@language.Id>@language.Name</option>
-            }
-        </select>
-    </div>
-    <div class="form-group justify-content-center">
-        <label asp-for="PagesCount"><strong>Number of Pages</strong></label>
-        <input asp-for="PagesCount" value="@Model.PagesCount" type="number" min="5" class="form-control">
-        <span asp-validation-for="PagesCount" class="small text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="CategoryId"><strong>Select Category</strong></label>
-        <select asp-for="CategoryId" size="5" aria-label="size 5 select example" class="form-select form-control">
-            @foreach (var category in Model.Categories)
-            {
-                <option value=@category.Id>@category.Name</option>
-            }
-        </select>
-    </div>
-    <div class="form-group justify-content-center">
-        <label asp-for="PublishedYear"><strong>Year</strong></label>
-        <input asp-for="PublishedYear" value="@Model.PublishedYear" type="number" class="form-control">
-        <span asp-validation-for="PublishedYear" class="small text-danger"></span>
-    </div>
-    <div class="form-group justify-content-center">
-        <label asp-for="Publisher"><strong>Publisher(optional)</strong></label>
-        <input asp-for="Publisher" value="@Model.Publisher" type="text" class="form-control">
-        <span asp-validation-for="Publisher" class="small text-danger"></span>
-    </div>
-    <div id="AuthorsContainer">
-        <a class="btn" onclick="AddAuthors()"><strong>Add Author</strong></a>
-        <a class="btn" onclick="RemoveAuthors()"><strong>Remove Author</strong></a>
-    </div>
-    <div class="form-group justify-content-center">
-        <label asp-for="Description"><strong>Description</strong></label>
-        <textarea asp-for="Description" class="form-control" rows="12"></textarea>
-        <span asp-validation-for="Description" class="small text-danger"></span>
-    </div>
-</form>
-<div class="text-center">
-    <button type="submit" class="btn button" data-toggle="modal" data-target="#editModal"><strong>Edit Book</strong></button>
-</div>
+<section class="editBookSection">
+    <form method="post" enctype="multipart/form-data">
+        @* <div class="d-flex justify-content-center">
+        <img src="@Model.ImageUrl" />
+        </div> *@
+        @* <input type="hidden" asp-for="Id" value="@Model.Id"> *@
+        <div asp-validation-summary="All" class="text-danger"></div>
 
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Edit book</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to edit book?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="editBookForm.submit()">Yes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+        <div class="form-group">
+            <label asp-for="Title"><strong>Title</strong></label>
+            <input asp-for="Title" value="@Model.Title" type="text" class="form-control">
+            <span asp-validation-for="Title" class="small text-danger"></span>
         </div>
-    </div>
-</div>
 
-@section Scripts{
-<script src="~/js/removeAuthors.js"></script>
-<script src="~/js/addAuthors.js"></script>
-<script src="~/js/customFile.js"></script>
-<script src="~/js/customImage.js"></script>
+        <div class="form-group mt-4">
+            <label asp-for="LanguageId"><strong>Select Language</strong></label>
+            <select asp-for="LanguageId" size="10" aria-label="size 5 select example" class="form-select form-control">
+                @foreach (var language in Model.Languages)
+                {
+                    <option value=@language.Id>@language.Name</option>
+                }
+            </select>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="PagesCount"><strong>Number of Pages</strong></label>
+            <input asp-for="PagesCount" value="@Model.PagesCount" type="number" min="5" class="form-control">
+            <span asp-validation-for="PagesCount" class="small text-danger"></span>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="CategoryId"><strong>Select Category</strong></label>
+            <select asp-for="CategoryId" size="10" aria-label="size 5 select example" class="form-select form-control">
+                @foreach (var category in Model.Categories)
+                {
+                    <option value=@category.Id>@category.Name</option>
+                }
+            </select>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="PublishedYear"><strong>Year</strong></label>
+            <input asp-for="PublishedYear" value="@Model.PublishedYear" type="number" class="form-control">
+            <span asp-validation-for="PublishedYear" class="small text-danger"></span>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="Publisher"><strong>Publisher(optional)</strong></label>
+            <input asp-for="Publisher" value="@Model.Publisher" type="text" class="form-control">
+            <span asp-validation-for="Publisher" class="small text-danger"></span>
+        </div>
+
+        <div class="mt-4" id="authorsContainer" data-index="0">
+            <div id="alert-message"></div>
+            <button type="button"
+                    id="addAuthorBtn"
+                    class="btn button fs-5 w-100">
+                Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i>
+            </button>
+            @foreach (var item in Model.Authors)
+            {
+                <div class="input-group mt-4">
+                    <input
+                        asp-for="@item"
+                        value="@item.Name"
+                        type="text"
+                        class="form-control"
+                        placeholder="Author's username"
+                        aria-label="Author's username"
+                        aria-describedby="button-addon2">
+                    <button class="btn btn-danger" type="button" id="deleteAuthorBtn">Remove</button>
+                </div>
+            }
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="Description"><strong>Description</strong></label>
+            <textarea asp-for="Description" class="form-control" rows="12"></textarea>
+            <span asp-validation-for="Description" class="small text-danger"></span>
+        </div>
+
+        <div class="d-flex justify-content-center mt-4">
+            <button type="submit" class="btn button btn-lg">
+                <strong>Edit Book<i class="fa fa-pen-to-square ms-2"></i></strong>
+            </button>
+        </div>
+    </form>
+</section>
+
+
+
+
+@section Scripts {
+    <script src="~/js/authors.js"></script>
+    <script src="~/lib/tinymce/tinymce.min.js"></script>
+    <script>
+        tinymce.init({
+            selector: "textarea",
+            browser_spellcheck: true,
+            contextmenu: false,
+            plugins: [
+                "code",
+                "image",
+                "link",
+                "lists",
+                "preview",
+                "searchreplace",
+                "table",
+                "wordcount"]
+        });
+    </script>
 }
