Add two images for login and register

--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,10 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img src=@Model.LoginPictureUrl class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image..." />
+    <img
+        src="~/images/login.jpg"
+        class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster"
+        alt="Books Image..." />
     <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
         <partial name="PartialViews/_CustomDividerPartial" />
         <form id="account" method="post">
