--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img src="@Model.RegisterPictureUrl" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image...">
+    <img src="~/images/register.jpg" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image...">
     <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
         <partial name="PartialViews/_CustomDividerPartial" />
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
