--- a/Web/Bookworm.Web/Views/Book/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EditBookFormModel
+﻿@model EditBookViewModel
 
 @{
     this.ViewData["Title"] = "Edit Book";
@@ -21,10 +21,14 @@
         <div class="form-group mt-4">
             <label asp-for="LanguageId"><strong>Select Language</strong></label>
             <select asp-for="LanguageId" size="10" aria-label="size 5 select example" class="form-select form-control">
-                @foreach (var language in Model.Languages)
-                {
-                    <option value=@language.Id>@language.Name</option>
-                }
+                @await Component.InvokeAsync("Languages", new { selectedLanguageId = Model.LanguageId })
+            </select>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="CategoryId"><strong>Select Category</strong></label>
+            <select asp-for="CategoryId" size="10" aria-label="size 5 select example" class="form-select form-control">
+                @await Component.InvokeAsync("Categories", new { selectedCategoryId = Model.CategoryId })
             </select>
         </div>
 
@@ -35,13 +39,15 @@
         </div>
 
         <div class="form-group mt-4">
-            <label asp-for="CategoryId"><strong>Select Category</strong></label>
-            <select asp-for="CategoryId" size="10" aria-label="size 5 select example" class="form-select form-control">
-                @foreach (var category in Model.Categories)
-                {
-                    <option value=@category.Id>@category.Name</option>
-                }
-            </select>
+            <label asp-for="BookFile" class="form-label"></label>
+            <input asp-for="BookFile" type="file" class="form-control">
+            <span asp-validation-for="BookFile" class="small text-danger"></span>
+        </div>
+
+        <div class="form-group mt-4">
+            <label asp-for="ImageFile" class="form-label"></label>
+            <input asp-for="ImageFile" type="file" class="form-control">
+            <span asp-validation-for="ImageFile" class="small text-danger"></span>
         </div>
 
         <div class="form-group mt-4">
@@ -64,12 +70,10 @@
                 Add Author
                 <i class="fa-solid fa-square-plus ms-2 fa-xl"></i>
             </button>
-
             
             @for (int i = 0; i < Model.Authors?.Count; i++)
             {
                 <div class="input-group mt-4">
-                    <input asp-for="@Model.Authors[i].Id" type="hidden" />
                     <input asp-for="@Model.Authors[i].Name"
                            type="text"
                            class="form-control"
