--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -22,7 +22,7 @@
                         size="8"
                         aria-label="size 5 select example"
                         class="fs-5 form-select">
-                    <vc:languages></vc:languages>
+                    @await Component.InvokeAsync("Languages")
                 </select>
                 <span asp-validation-for="LanguageId" class="small text-danger"></span>
             </div>
@@ -32,7 +32,7 @@
                         size="8"
                         aria-label="size 5 select example"
                         class="fs-5 form-select">
-                    <vc:categories></vc:categories>
+                    @await Component.InvokeAsync("Categories")
                 </select>
                 <span asp-validation-for="CategoryId" class="small text-danger"></span>
             </div>
